<?xml version="1.0" encoding="utf-8"?>
<!--
Copyright (c) 2009, Google Inc.

Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at

    http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.
-->
<resources>
    <string name="app_name">Talking RSS Reader</string>
    <string name="initializing">Initializing</string>
    <string name="login_failed">Login failed</string>
    <string name="getting_article_feed">Getting Article Feed</string>
    <string name="today_at">Today at</string>
    <string name="yesterday_at">Yesterday at</string>
    <string name="empty_article">Empty article</string>
    <string name="end_of_article">End of article</string>
    <string name="top_of_article">Top of article</string>
    <string name="no_articles">No articles</string>
    <string name="options_menu_refresh">Refresh</string>
    <string name="options_menu_feeds">Feeds list</string>
    <string name="options_menu_add_star">Add star</string>
    <string name="options_menu_remove_star">Remove star</string>
    <string name="options_menu_reading_list">All feeds</string>
    <string name="options_menu_starred">Starred</string>
    <string name="options_menu_recently_read">Recently read</string>
    <string name="options_menu_help">Help</string>
    <string name="authentication_title">Authentication</string>
    <string name="feeds_title">Feeds</string>
    <string name="no_feeds">No Subscribed Feeds</string>
    <string name="new_feed">Add new feed</string>
    <string name="options_menu_labels">Labels</string>
    <string name="options_menu_settings">Settings</string>
    <string name="options_menu_client_login">Login with another account</string>
    <string name="labels_title">Labels</string>
    <string name="no_labels">No Labels Defined</string>
    <string name="subscribe_title">Subscribe New Feed</string>
    <string name="subscribe_prompt1">Enter URL of feed</string>
    <string name="subscribe_prompt2">to subscribe</string>
    <string name="url_of_feed_hint">URL of feed</string>
    <string name="subscribe">Subscribe</string>
    <string name="subscribing">Subscribing</string>
    <string name="subscribed">Subscribed</string>
    <string name="error_dialog_ok">OK</string>
    <string name="feed_details_title">Feed Details</string>
    <string name="go_back">Go Back</string>
    <string name="unsubscribe">Unsubscribe</string>
    <string name="unsubscribing">Unsubscribing</string>
    <string name="unsubscribed">Unsubscribed</string>
    <string name="waiting_for_subscription_info">Waiting for subscription info...</string>
    <string name="art_prev">Prev</string>
    <string name="art_next">Next</string>
    <string name="tagging">Tagging</string>
    <string name="tagged">Tagged</string>
    <string name="untagging">Untagging</string>
    <string name="untagged">Untagged</string>
    <string name="end_of_feed">End of Feed</string>
    <string name="beginning_of_feed">Beginning of Feed</string>
    <string name="getting_more_articles">Getting more articles</string>
    <string name="nothing_to_speak">Nothing to speak</string>
    <string name="help_dismiss">OK</string>
    <string name="end_of_page">End of page</string>
    <string name="help_title">Help</string>
    <string name="welcome">Welcome to the Talking RSS Reader</string>
    <string name="login_prompt">Login to Google Reader</string>
    <string name="login_email_hint">E-Mail</string>
    <string name="login_password_hint">Password</string>
    <string name="login_button">Login</string>
    <string name="login_note">Your password will not be stored on this device. Only the authentication token for this service, valid for a few days, will be remembered.</string>
    <string name="logging_in">Logging in...</string>
    <string name="logged_in_ok">Logged in successfully.</string>
    <string name="settings_title">Settings</string>
    <string name="options_menu_title">Options</string>
    <string name="text_deleted">Deleted</string>
    <string name="edit_text">Edit text</string>
    <string name="sdcard_not_mounted">SD card not mounted. The text-to-speech requires it.</string>
    <string name="next_article">Next article</string>
    <string name="auto_forward_pref_title">Auto-forward</string>
    <string name="auto_forward_pref_summary_on">When done reading an article, automatically start speaking the next one.</string>
    <string name="auto_forward_pref_summary_off">Require user action to go to the next article.</string>
    <string name="pause">Pause</string>
    <string name="play">Play</string>
</resources>
