<?xml version="1.0" encoding="utf-8"?>
<!--
Copyright (c) 2009, Google Inc.

Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at

    http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.
-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:paddingTop="20sp"
    android:paddingLeft="20sp"
    android:paddingRight="20sp"
    >
    <TextView  
        android:layout_width="fill_parent" 
        android:layout_height="wrap_content" 
        android:text="@string/login_prompt"
        android:gravity="center_horizontal"
        android:textAppearance="?android:attr/textAppearanceLarge"
        />
    <EditText
        android:id="@+id/login_email"
        android:layout_height="wrap_content"
        android:layout_width="fill_parent"
        android:hint="@string/login_email_hint"
        android:inputType="textEmailAddress"
        android:singleLine="true"
        android:paddingTop="10dip"
        />
    <EditText  
        android:id="@+id/login_password"
        android:layout_width="fill_parent" 
        android:layout_height="wrap_content" 
        android:password="true"
        android:singleLine="true"
        android:hint="@string/login_password_hint"
        android:inputType="textPassword"
        android:paddingTop="10dip"
        />
    <Button android:id="@+id/login_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/login_button"
        android:paddingTop="10dip"
    />
    <TextView  
        android:layout_width="fill_parent" 
        android:layout_height="wrap_content" 
        android:gravity="center_horizontal"
        android:paddingTop="20sp"
        android:text="@string/login_note"
        android:textAppearance="?android:attr/textAppearanceSmall"
        />
</LinearLayout>
